@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-15T16:24:42Z",
-  "count_outdated" : 2153,
-  "uniques_outdated" : 430,
-  "count" : 2184,
-  "uniques" : 451,
+  "timestamp" : "2022-06-16T01:42:52Z",
+  "count_outdated" : 2155,
+  "uniques_outdated" : 431,
+  "count" : 2187,
+  "uniques" : 452,
   "clones" : [
-    {
-      "timestamp": "2022-06-01T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-02T00:00:00Z",
       "count": 3,
@@ -105,10 +98,10 @@
     },
     {
       "timestamp": "2022-06-15T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ]
     }
   ]
 }
