@@ -1,12 +1,7 @@
 {
-  "count": 31,
-  "uniques": 7,
+  "count": 32,
+  "uniques": 8,
   "clones": [
-    {
-      "timestamp": "2022-06-01T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-06-02T00:00:00Z",
       "count": 3,
@@ -74,8 +69,8 @@
     },
     {
       "timestamp": "2022-06-15T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 3,
+      "uniques": 2
     }
   ]
 }
